# lumio

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  openapi.yml  package-lock.json  pyproject.toml
core/core/: settings.py  urls.py
core/tasks/: labels_urls.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
core/tasks/management/commands/: create_default_labels.py
core/tasks/migrations/: 0001_initial.py  0002_remove_task_author.py  0003_alter_task_due_date.py  0004_label_remove_task_label_task_labels.py  0005_alter_label_id.py  0006_auto_20250825_1812.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/main/: NavBar.css  NavBar.jsx
frontend/src/main/common/: Button.css  Button.jsx  Button.module.css  Modal.css  Modal.jsx  Modal.module.css  Notification.jsx  Notification.module.css
frontend/src/main/header/: Header.css  Header.jsx  Header.module.css
frontend/src/main/routes/: routes.module.css  sidebarRoutes.jsx  taskDetails.jsx  taskDetails.module.css
frontend/src/main/sidebar/: SideBar.css  SideBar.jsx  SideBar.module.css  SideBarData.jsx  routes.css  routes.jsx
frontend/src/main/tasks/: TaskModal.css  TaskModal.jsx  TaskModal.module.css  TaskTable.css  TaskTable.module.css  TasksApi.jsx  TasksManagementBar.css  TasksManagementBar.jsx  TasksManagementBar.module.css  TasksTable.jsx
