[tool.poetry]
name = "lumio"
version = "0.1.0"
description = "task management system"
authors = ["Anastasiia Derevianko <aderevianko@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
